dnl Process this file with autoconf to produce a configure script.
AC_INIT(guitune.cc)

AM_INIT_AUTOMAKE(gtkguitune, 0.8)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
PKG_CHECK_MODULES(GTKMM, glibmm-2.4 gtkmm-2.4 sigc++-2.0)
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

AC_OUTPUT([
	Makefile
	icon/Makefile
	])
